<resources>
	<string name="map_api_key">056aIoROCQ_g5XLBuKk8AMLSANzVgECHNzbL1rw</string>
	<string name="app_name">掌上租房</string>
	<string name="hello">掌上租房</string>
	<string name="search_view_tab">租房搜索</string>
	<string name="history_view_tab">搜索历史</string>
	<string name="inventory_view_tab">看房清单</string>
	<string name="more_view_tab">更多</string>
	<string name="map_search_title">地图找房</string>
	<string name="list_search_title">列表找房</string>
	<string name="address_search_title">地点选择</string>
	<string name="sift_search_title">房源筛选</string>
	<string name="filter">筛选</string>
	<string name="button_confirm_search">确定搜索</string>
	<string name="button_info_list">列表</string>
	<string name="button_info_map">地图</string>
	<string name="button_search">搜索</string>
	<string name="button_subscribe">订阅</string>
	<string name="button_hidden">收藏</string>
	<string name="button_add_favorite">收藏</string>
	<string name="no_price">暂无价格</string>
	<string name="choice_province">选择省份</string>
	<string name="choice_city">选择城市</string>
	<string name="choice_area">选择区县</string>
	<string name="choice_bussiness">选择商圈</string>
	<string name="no_cell_in_the_location">服务器繁忙,请点击这里重试</string>
	<string name="server_busy">服务器繁忙,请稍候再试</string>
	<string name="community_landscape">小区实景图</string>
	<string name="community_flat_type">小区戶型图</string>
	<string name="detail_dialed">您已拨打过，是否再次拨打？</string>
	<string name="detail_dial_warning">确认要拨打电话？</string>
	<string name="detail_dial_again">是否拨打</string>
	<string name="yuan">元</string>
	<string name="yuan_two_unit">元/两居</string>
	<string name="unavailable">暂无</string>
	<string name="unavailable2">暂无均价</string>
	<string name="confirm">确定</string>
	<string name="cancel">取消</string>
	<string name="reset">重置</string>
	<string name="tip">提示</string>
	<string name="unknown">未知</string>
	<string name="label_update">升级</string>
	<string name="update_info">发现新版本</string>
	<string name="update_tip">有新版本</string>
	<string name="info_updating">正在升级...</string>
	<string name="update_fail">升级失败, 请稍候重试</string>
	<string name="unvaliable_network">网络不可用</string>
	<string name="whether_delete">是否删除</string>
	<string name="submitting">正在提交</string>
	<string name="info_feedback_success">提交建议成功，非常感谢您的反馈</string>
	<string name="without_price">价格不限</string>
	<string name="without_room">居室不限</string>
	<string name="without_way">方式不限</string>
	<string name="unit_yuan">元</string>
	<string name="label_has_new_reply">有新回复</string>
	<string name="question">问：</string>
	<string name="answer">答：</string>
	<string name="checking_update">正在检查更新...</string>
	<string name="is_loading">正在加载中...</string>
	<string name="list_load_more">加载更多...</string>
	<string name="result_label">搜索结果</string>
	<string name="info_input_location">小区或位置</string>
	<string name="defalut_city">北京</string>
	<string name="none_condition">不限</string>
	<string name="submit">提交</string>
	<string name="cannot_get_location">无法定位</string>
	<string name="setting">设置</string>
	<string name="about">关于</string>
	<string name="tip_for_answer">若希望和客服取得联系，请留下联系方式</string>
	<string name="no_answer">已提交, 等待回复</string>
	<string name="no_update_version">没有可用的更新版本</string>
	<string name="prompt_choice_area_first">请先选择区县再选择商圈</string>
	<string name="prompt_district_not_in_city">当前区县不在当前设置城市内，请先改变城市或区县</string>
	<string name="community_has_not_flat">暂无实景图</string>
	<string name="community_has_not_lands">暂无户型图</string>
	<string name="sq_meter">平米</string>
	<string name="error_can_not_find_location">未找到相关地点</string>
	<string name="error_can_not_be_empty">内容不能为空</string>
	<string name="string_room">居室</string>
	<string name="toast_not_found_location">无法定位</string>
	<string name="topnotifybar_info_search_view">您在%1$s附近,租房信息%2$d条</string>
	<string name="topnotifybar_info_search_view2">%1$s附近租房信息%2$d条</string>
	<string name="price_range">价格区间：</string>
	<string name="room_type">户型选择：</string>
	<string name="distance">距离范围：</string>
	<string name="personal">个人房源</string>
	<string name="agency">品牌中介</string>
	<string name="individual">整租房源</string>
	<string name="combinition">合租房源</string>
	<string name="other_none_condition">所有条件不限</string>
	<string name="type_place_or_communitiy">输入地名或小区名</string>
	<string name="detail_title">房源详细信息</string>
	<string name="more_recommend_app">更多精彩应用</string>
	<string name="more_app_tab">更多</string>
	<string name="more_app_tab_title">更多</string>
	<string name="more_app_tab_standard_option_prompt">基本选项</string>
	<string name="more_app_tab_advance_option_prompt">高级选项</string>
	<string name="more_app_tab_relate_option_prompt">更多应用</string>
	<string name="inventtory_collect_button_title">房源收藏</string>
	<string name="inventtory_call_history_button_title">拨打记录</string>
	<string name="rent_setting_label">设置</string>
	<string name="download_error">下载失败</string>
	<string name="please_select">请选择</string>
	<string name="info_choice_district">再次点击搜索框即可打开键盘</string>
	<string name="info_confirm_add_shortcut">是否要创建快捷方式?</string>
	<string name="notify_for_result">%1$s符合的租房信息有%2$d条</string>
	<string name="notify_for_result_2">符合的租房信息有%1$d条</string>
	<string name="on_loading">读取中...</string>
	<string name="about_99fang">关于九九房</string>
	<string name="back">返回</string>
	<string name="info_about_version_info">© 99fang.com Version %1$s</string>
	<string name="info_about_content">
		九九房搜索聚合各大房产网站房源信息，让您更快获取更丰富的房源。同时经过程序筛选与精心编辑，保证房源信息真实有效。</string>
	<string name="info_logo_title">网上找房第一站</string>
	<string name="info_confirm_to_exit">确定要退出掌上租房?</string>
	<string name="info_no_result">未找到相关结果</string>
	<string name="info_is_location">正在定位中...</string>
	<string name="info_is_gethouse">正在获取房源中...</string>
	<string name="info_success_location_fail_house">定位成功,无法获取房源</string>
	<string name="label_visit_our_website">访问九九房网站</string>
	<string name="label_share_to_friends">与好友分享此应用</string>
	<string name="app_about_label">关于</string>
	<string name="app_help_label">使用帮助</string>
	<string name="app_help_title">使用帮助</string>
	<string name="feedback">意见反馈</string>
	<string name="feedback_label">意见反馈</string>
	<string name="feedback_submit_but">提交</string>
	<string name="tip_input_feedback">请在此输入您的建议</string>
	<string name="tip_input_feedback_answer">若希望和客服迅速取得联系，请留下联系方式</string>
	<string name="rent_setting_rent_search_mode">租房搜索启动模式</string>
	<string name="rent_setting_rent_search_mode_title">请选择模式</string>
	<string name="rent_setting_rent_search_mode_prompt">地图模式便利直观；列表模式省流量</string>
	<string name="rent_setting_rent_source_list_reveal">房源列表展现方式</string>
	<string name="rent_setting_rent_source_list_reveal_title">请选择展示方式</string>
	<string name="rent_setting_rent_source_list_reveal_prompt">房源按小区聚合更简洁清爽，减少滚动查找。</string>
	<string name="rent_setting_rent_source_updata_notify">关注房源更新通知</string>
	<string name="rent_setting_rent_source_updata_summry">保存搜索历史后，有房源更新时通知。</string>
	<string name="rent_setting_choice_city">选择其他城市租房</string>
	<string name="rent_setting_reset_setting">重置租房搜索</string>
	<string name="rent_setting_reset_setting_summry">当您无法正常使用租房搜索时请尝试此操作。</string>
	<string name="rent_setting_show_map_zoom_button">是否显示地图缩放按钮</string>
	<string name="rent_setting_show_map_zoom_button_summry">部分不支持多点缩放的机型请保持勾选</string>
	<string name="rent_setting_clear_cache">退出自动清除图片缓存</string>
	<string name="rent_setting_clear_cache_prompt">若程序运行缓慢请勾选此项</string>
	<string name="rent_favourite_price_money_unit">元/月</string>
	<string name="rent_favourite_source_property_medium">中介</string>
	<string name="rent_favourite_source_property_oneself">个人</string>
	<string name="rent_favourite_rent_type_lease_all">整租</string>
	<string name="rent_favourite_rent_type_lease_part">合租</string>
	<string name="rent_favourite_room_info_num">%s</string>
	<string name="rent_favourite_room_info_area">(%s)</string>
	<string name="rent_favourite_room_address">%s</string>
	<string name="ellipsis">...</string>
	<string name="rent_favourite_edit">编辑</string>
	<string name="rent_called_last_call_time_format">MM/dd-HH:mm</string>
	<string name="rent_called_last_call_time_format_today">HH:mm</string>
	<string name="month_day">MM/dd</string>
	<string name="community_detail_sourcecount">符合要求的房源信息 %d 条</string>
	<string name="community_detail">小区详情</string>
	<string name="load_failed">加载失败</string>
	<string name="rent_average_phrase">租房均价:</string>
	<string name="rent_average_unit">/两居</string>
	<string name="rent_average_price">%d元/两居</string>
	<string name="rent_average_price_mount">月均价：%d元/两居</string>
	<string name="house_source">房源数量:</string>
	<string name="house_source_flat">套</string>
	<string name="build_time">建造时间:</string>
	<string name="decoration_info">装修风格:</string>
	<string name="tenement_fee">物业管理费：</string>
	<string name="property_company">物业公司：</string>
	<string name="developer">开发商:</string>
	<string name="floors">楼层状况：</string>
	<string name="property_type">物业类型:</string>
	<string name="building_area">建筑面积：</string>
	<string name="cover_area">占地面积：</string>
	<string name="floor_area_ratio">容 积 率:</string>
	<string name="community_shijing_pic">小区实景图</string>
	<string name="community_huxing_pic">小区戶型图</string>
	<string name="price_chart">%s价格走势图</string>
	<string name="price_chart_trim">价格走势图</string>
	<string name="nothing">无</string>
	<string name="route_nav">路线导航</string>
	<string name="address_unknown">地点未知</string>
	<string name="community_detail_primarySchool">中小学：</string>
	<string name="community_detail_kindergarten">幼儿园：</string>
	<string name="community_detail_postOffice">邮局：</string>
	<string name="community_detail_bank">银行：</string>
	<string name="community_detail_medicalStation">卫生医疗站：</string>
	<string name="community_detail_school">学校：</string>
	<string name="community_detail_businessDistrict">商圈：</string>
	<string name="community_detail_hospital">医院：</string>
	<string name="community_detail_bus">公交：</string>
	<string name="community_detail_subway">地铁：</string>
	<string name="community_detail_intro_unavailable">小区介绍添加中</string>
	<string name="community_introduce">小区介绍</string>
	<string name="community_around_condition">周边环境</string>
	<string name="community_traffic_path">交通路线</string>
	<string name="map_navigate">地图导航</string>
	<string name="googlemap_navagitor_error">谷歌地图异常，请检测您是否已经正确安装谷歌地图。</string>
	<string name="unable_use_navigate">暂时无法使用地图导航</string>
	<string name="source_detail_title">房源详情</string>
	<string name="source_detail_label">房源详情</string>
	<string name="source_detail_collection">收藏</string>
	<string name="source_detail_money_unit">价格：%s 元/月</string>
	<string name="source_detail_room_num_unit">户型：%s</string>
	<string name="source_detail_rent_area_unit">面积：%s</string>
	<string name="source_detail_rent_type_unit">租赁方式：%s</string>
	<string name="source_detail_source_property_unit">房源属性：%s</string>
	<string name="source_detail_address_unit">地址：%s</string>
	<string name="source_detail_publish_time">发布时间：%s</string>
	<string name="source_detail_from_site">来源：%s</string>
	<string name="source_detail_custom_called_num">%s位租房搜索用户拨打过此房源</string>
	<string name="source_detail_called_title">是否拨打该号码</string>
	<string name="source_detail_start_error">意外!打开失败</string>
	<string name="source_detail_contact_path">号码下载中...</string>
	<string name="abstract_not_available">暂无详情</string>
	<string name="search_history_title_separate">-</string>
	<string name="search_history_no_restraint">不限</string>
	<string name="search_history_update_tiem">更新时间：%s</string>
	<string name="subscript_sussess">已添加到搜索历史</string>
	<string name="duplicate_prompt">已有相同搜索历史存在</string>
	<string name="price_session">价格:%1$s元~%2$s元</string>
	<string name="upper_price">%s元以上</string>
	<string name="info_confirm_to_view_history">恢复到此条件下的历史搜索?</string>
	<string name="delete_the_row">删除本条历史记录</string>
	<string name="siftsearch_price_section_separator">~</string>
	<string name="siftsearch_price_section_max_price">以上</string>
	<string name="siftsearch_distance_length_units">公里</string>
	<string name="custom_dialog_title">自定义价格区间</string>
	<string name="not_have_google_map">无Google地图组件,地图不能显示!</string>
</resources>